# OSEHRA-Technical-Journal-Template

./: CMakeLists.txt  NOTICE  README
ReportTemplate/: CMakeLists.txt
ReportTemplate/LaTeX/: OSEHRAArticle.cls  OSEHRAJournal.bib  OSEHRAJournal.sty
ReportTemplate/Report000/: CMakeLists.txt  CPRS-Technical-Article.tex  HowToWriteTechnicalReport.tex  R1AC_PRINT_POSTCARD_3.0_Report.tex
Source/: CMakeLists.txt  PROGRAM1.m
